[nova] Define parameters for spice console deployment
Closes-Bug: PRODX-37121
Change-Id: I0dd19295f33c2d43fb57eb43fed6309479a5f2b2

--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -752,10 +752,24 @@ properties:
             type: object
             additionalProperties: false
             properties:
+              spice:
+                type: object
+                additionalProperties: false
+                properties:
+                  enabled:
+                    type: boolean
+                    description: |
+                      Enable SPICE console feature
+                      default: false
               novnc:
                 type: object
                 additionalProperties: false
                 properties:
+                  enabled:
+                    type: boolean
+                    description: |
+                      Enable VNC console feature
+                      default: true
                   tls:
                     type: object
                     additionalProperties: false
