--- a/tests/fixtures/network_policies/output/database.yaml
+++ b/tests/fixtures/network_policies/output/database.yaml
@@ -111,6 +111,10 @@ database:mariadb:StatefulSet:mariadb-server:
   - podSelector:
       matchLabels:
         application: nova
+        component: spice-proxy
+  - podSelector:
+      matchLabels:
+        application: nova
         component: placement
   - podSelector:
       matchLabels:
