--- a/tests/fixtures/network_policies/output/identity.yaml
+++ b/tests/fixtures/network_policies/output/identity.yaml
@@ -143,6 +143,10 @@ identity:keystone:Deployment:keystone-api:
   - podSelector:
       matchLabels:
         application: nova
+        component: spice-proxy
+  - podSelector:
+      matchLabels:
+        application: nova
         component: placement
   - podSelector:
       matchLabels:
