--- a/openstack_controller/templates/preset/compute.yaml
+++ b/openstack_controller/templates/preset/compute.yaml
@@ -176,6 +176,10 @@ services:
             ingress:
               classes:
                 namespace: {{ nginx_ingress_namespace_class }}
+          spiceproxy:
+            ingress:
+              classes:
+                namespace: {{ nginx_ingress_namespace_class }}
         bootstrap:
           structured:
             flavors:
