--- a/openstack_controller/templates/size/small.yaml
+++ b/openstack_controller/templates/size/small.yaml
@@ -130,6 +130,7 @@ services:
             consoleauth: 3
             scheduler: 3
             novncproxy: 3
+            spiceproxy: 3
             placement: 4
             # Byggy code, give up and use 1 instance
             compute_ironic: 1
