--- a/openstack_controller/templates/size/tiny.yaml
+++ b/openstack_controller/templates/size/tiny.yaml
@@ -123,6 +123,7 @@ services:
             consoleauth: 3
             scheduler: 3
             novncproxy: 3
+            spiceproxy: 3
             placement: 3
             # Byggy code, give up and use 1 instance
             compute_ironic: 1
