--- a/tests/fixtures/network_policies/output/coordination.yaml
+++ b/tests/fixtures/network_policies/output/coordination.yaml
@@ -59,6 +59,10 @@ coordination:etcd:StatefulSet:etcd-etcd:
   - podSelector:
       matchLabels:
         application: nova
+        component: spice-proxy
+  - podSelector:
+      matchLabels:
+        application: nova
         component: placement
   - podSelector:
       matchLabels:
