--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_libvirt_tls/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_libvirt_tls/context_spec.yaml
@@ -77,6 +77,11 @@ features:
         pool_start: '192.168.0.1'
         pool_end: '192.168.0.254'
   nova:
+    console:
+      novnc:
+        enabled: true
+      spice:
+        enabled: true
     libvirt:
       tls:
         enabled: true
