--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_libvirt_tls.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_libvirt_tls.yaml
@@ -234,6 +234,35 @@ spec:
           scheme:
             default: http
             public: https
+        compute_spice_proxy:
+          host_fqdn_override:
+            public:
+              host: spiceproxy.it.just.works
+              tls:
+                ca: |
+                  TEST CA
+                crt: |
+                  TEST CRT
+                key: |
+                  TEST KEY
+          hosts:
+            default: nova-spiceproxy
+            public:
+              host: spiceproxy
+              tls:
+                ca: |
+                  TEST CA
+                crt: |
+                  TEST CRT
+                key: |
+                  TEST KEY
+          port:
+            spice_proxy:
+              default: 6082
+              public: 443
+          scheme:
+            default: http
+            public: https
         compute_metadata:
           host_fqdn_override:
             public:
@@ -418,12 +447,10 @@ spec:
           nova_db_sync_db: nova-db-sync-db:latest
           nova_db_sync_online: nova-db-sync-online:latest
           nova_novncproxy: nova-novncproxy:latest
-          nova_novncproxy_assets: nova-novncproxy-assets:latest
           nova_placement: nova-placement:latest
           nova_scheduler: nova-scheduler:latest
           nova_service_cleaner: nova-service-cleaner:latest
           nova_spiceproxy: nova-spiceproxy:latest
-          nova_spiceproxy_assets: nova-spiceproxy-assets:latest
           rabbit_init: rabbit-init:latest
           test: test:latest
       jobs:
@@ -459,9 +486,14 @@ spec:
         pdb_placement: false
         secret_ca_bundle: true
         secret_keystone_placement: false
+        secret_novncproxy_tls: false
         service_ingress_placement: false
         service_placement: false
         ceph_conf: true
+        ingress_novncproxy: true
+        ingress_spiceproxy: true
+        service_ingress_novncproxy: true
+        service_ingress_spiceproxy: true
       network:
         core_plugin: ml2
         sshd:
@@ -524,6 +556,16 @@ spec:
                 enabled: true
                 params:
                   initialDelaySeconds: 0
+          compute-spice-proxy:
+            default:
+              liveness:
+                enabled: true
+                params:
+                  initialDelaySeconds: 0
+              readiness:
+                enabled: true
+                params:
+                  initialDelaySeconds: 0
           rpc_retries: 2
           rpc_timeout: 30
           scheduler:
@@ -545,9 +587,16 @@ spec:
           placement: 3
         useHostNetwork:
           novncproxy: false
+          spiceproxy: false
         use_fqdn:
           compute: false
       console:
         novnc:
+          enabled: true
+          tls_enabled: false
           compute:
             vncserver_proxyclient_interface: ens3
+        spice:
+          enabled: true
+          compute:
+            server_proxyclient_interface: ens3
