Restart l3-agent manually
Use same strategy to restart l3-agent
 * When cluster is under maintenance restart when nmr is deleted
 * When cluster is not under maintenance restart one by one

Restart l3 agent after openvswitch is restarted, avoid simultenious
restarts.

Related-Prod: PRODX-37353
Change-Id: I5729f8c2d115d76f29af9eb98435b6dd6f669ed3

--- a/openstack_controller/templates/size/medium.yaml
+++ b/openstack_controller/templates/size/medium.yaml
@@ -245,6 +245,7 @@ services:
                   max_unavailable: 10%
                 l3_agent:
                   max_unavailable: 1
+                  pod_replacement_strategy: OnDelete
                 lb_agent:
                   max_unavailable: 10%
                 metadata_agent:
@@ -293,10 +294,11 @@ services:
           lifecycle:
             upgrades:
               daemonsets:
-                pod_replacement_strategy: OnDelete
-                ovs_db:
+                ovn_controller:
+                  pod_replacement_strategy: OnDelete
                   max_unavailable: 1
                 ovs_vswitchd:
+                  pod_replacement_strategy: OnDelete
                   max_unavailable: 1
     rabbitmq:
       values:
