--- a/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr.yaml
@@ -78,6 +78,7 @@ spec:
           nova:
             auth_section: keystone_authtoken
             auth_type: password
+        enable_iscsi: false
         logging:
           logger_cinder:
             level: INFO
@@ -290,6 +291,13 @@ spec:
         replicas:
           api: 1
           registry: 1
+        security_context:
+          cinder_backup:
+            pod:
+              runAsUser: 42424
+          cinder_volume:
+            pod:
+              runAsUser: 42424
       secrets:
         rbd:
           backup: cinder-rbd-keyring
