Pass keyring keys to chart via values
Update values for Glance charts

Related-Prod: PRODX-37846
Change-Id: If385600992498e69ab544064c372099cd3068a65

--- a/openstack_controller/templates/services/image.yaml
+++ b/openstack_controller/templates/services/image.yaml
@@ -244,6 +244,9 @@ spec:
           config:
             global:
               mon_host: {{ ceph.mon_host }}
+          keyrings:
+            {{ ceph.glance.username }}:
+              key: {{ ceph.glance.keyring }}
 {%- else %}
           enabled: false
 {%- endif %}
