--- a/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_barbican_integration.yaml
+++ b/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_barbican_integration.yaml
@@ -146,6 +146,9 @@ spec:
                 - "10.10.10.1:6789"
                 - "10.10.10.2:6789"
                 - "10.10.10.3:6789"
+          keyrings:
+            glance:
+              key: AQDKZLJfoTtgAhAA7f9e8GriyIpFbj8Ez88l2A==
         glance:
           DEFAULT:
             enable_v2_registry: true
