Add image mapping for ingress_init_config
Related-Prod: PRODX-38131
Change-Id: I27ae4bfad0b4cf9632a1276cffe380c32b7cc6da

--- a/openstack_controller/templates/queens/artifacts.yaml
+++ b/openstack_controller/templates/queens/artifacts.yaml
@@ -216,3 +216,4 @@ manila-uuids-init: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-2
 requirements: '{{ images_base_url }}/openstack/requirements:queens-bionic-20230227093206'
 designate_pool_manage: '{{ images_base_url }}/openstack/designate:queens-bionic-20230227093206'
 designate_pool_manage_hash: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20231204153029'
+ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20231204153029'
