--- a/openstack_controller/templates/services/ingress.yaml
+++ b/openstack_controller/templates/services/ingress.yaml
@@ -28,6 +28,7 @@ spec:
     "ingress_module_init",
     "entrypoint",
     "dep_check",
+    "ingress_init_config",
     "ingress_tls_proxy",] %}
         {%- if image in images %}
           {{ image }}: {{ images[image] }}
