--- a/openstack_controller/templates/ussuri/artifacts.yaml
+++ b/openstack_controller/templates/ussuri/artifacts.yaml
@@ -223,3 +223,4 @@ neutron_dr: '{{ images_base_url }}/openstack/neutron:ussuri-bionic-2023022709320
 requirements: '{{ images_base_url }}/openstack/requirements:ussuri-bionic-20230227093206'
 designate_pool_manage: '{{ images_base_url }}/openstack/designate:ussuri-bionic-20230227093206'
 designate_pool_manage_hash: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20231204153029'
+ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20231204153029'
