--- a/openstack_controller/templates/wallaby/artifacts.yaml
+++ b/openstack_controller/templates/wallaby/artifacts.yaml
@@ -223,3 +223,4 @@ neutron_dr: '{{ images_base_url }}/openstack/neutron:wallaby-focal-2023092506581
 requirements: '{{ images_base_url }}/openstack/requirements:wallaby-focal-20230925065817'
 designate_pool_manage: '{{ images_base_url }}/openstack/designate:wallaby-focal-20230925065817'
 designate_pool_manage_hash: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20231204153029'
+ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20231204153029'
