--- a/openstack_controller/templates/xena/artifacts.yaml
+++ b/openstack_controller/templates/xena/artifacts.yaml
@@ -223,3 +223,4 @@ manila-uuids-init: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-2
 requirements: '{{ images_base_url }}/openstack/requirements:xena-focal-20230925065818'
 designate_pool_manage: '{{ images_base_url }}/openstack/designate:xena-focal-20230925065818'
 designate_pool_manage_hash: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20231204153029'
+ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20231204153029'
