Add image mapping for ingress_init_config
Related-Prod: PRODX-38131
Change-Id: If6113a592a12bb954df912bc55c54b5db19d912b

--- a/openstack_controller/templates/stein/artifacts.yaml
+++ b/openstack_controller/templates/stein/artifacts.yaml
@@ -218,3 +218,4 @@ neutron_dr: '{{ images_base_url }}/openstack/neutron:stein-bionic-20230227093206
 requirements: '{{ images_base_url }}/openstack/requirements:stein-bionic-20230227093206'
 designate_pool_manage: '{{ images_base_url }}/openstack/designate:stein-bionic-20230227093206'
 designate_pool_manage_hash: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20230928134535'
+ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20231110182826'
