--- a/openstack_controller/templates/yoga/artifacts.yaml
+++ b/openstack_controller/templates/yoga/artifacts.yaml
@@ -229,3 +229,4 @@ manila_db_purge: '{{ images_base_url }}/openstack/manila:yoga-jammy-202312041442
 requirements: '{{ images_base_url }}/openstack/requirements:yoga-jammy-20231204144213'
 designate_pool_manage: '{{ images_base_url }}/openstack/designate:yoga-jammy-20231204144213'
 designate_pool_manage_hash: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20231204144213'
+ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20231204144213'
