--- a/openstack_controller/templates/train/artifacts.yaml
+++ b/openstack_controller/templates/train/artifacts.yaml
@@ -217,3 +217,4 @@ neutron_dr: '{{ images_base_url }}/openstack/neutron:train-bionic-20230227093206
 requirements: '{{ images_base_url }}/openstack/requirements:train-bionic-20230227093206'
 designate_pool_manage: '{{ images_base_url }}/openstack/designate:train-bionic-20230227093206'
 designate_pool_manage_hash: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20230928134535'
+ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20231110182826'
