--- a/openstack_controller/templates/services/compute.yaml
+++ b/openstack_controller/templates/services/compute.yaml
@@ -50,6 +50,10 @@
 {%- set spice_enabled = nova_console.get('spice', {}).get('enabled', false) %}
 {%- set vnc_enabled = nova_console.get('novnc', {}).get('enabled', true) %}
 {%- set vnc_tls_enabled = vnc_enabled and nova_console.get('novnc', {}).get('tls', {}).get('enabled', false) %}
+{%- set swtpm_enabled = false %}
+{%- if spec.openstack_version in openstack_versions[openstack_versions.index('antelope'):-1] %}
+  {%- set swtpm_enabled = true %}
+{%- endif %}
 # COMPUTE OVERCOMMITS
 {%- set compute_overcommits = {"cpu": 8.0, "disk": 1.6, "ram": 1.0} %}  # INTERNAL DEFAULTS
 {%- do compute_overcommits.update(spec.get('features', {}).get('nova', {}).get('allocation_ratios', {})) %}
@@ -881,6 +885,11 @@ spec:
             virt_type: kvm
 {%- if is_ceph_enabled %}
             rbd_user: {{ ceph.nova.username }}
+{%- endif %}
+{%- if swtpm_enabled %}
+            swtpm_enabled: true
+            swtpm_user: tss
+            swtpm_group: tss
 {%- endif %}
 {%- if spec.get('features', {}).get('nova', {}).get('images', {}).get('backend') == 'ceph' %}
             images_type: rbd
