Explicitly enable nodemaintenance controller
Related-Prod: PRODX-3456
Change-Id: Id5e0f512b0f2f6c293f2c341ac809391d3852215

--- a/charts/openstack-operator/values.yaml
+++ b/charts/openstack-operator/values.yaml
@@ -186,6 +186,7 @@ admission:
               - ALL
 
 node_maintenance:
+  enabled: true
   create_crd: true
   # webhook needs to run with TLS. By default certificates are generated automatically,
   # if needed can be overridden manually here
