Update disruption_budget for dashboard for medium size template
Related-Prod: PRODX-3456
Change-Id: I20c6ecbb2cfedbe65d1559498a8b74fc0c33b542

--- a/openstack_controller/templates/size/medium.yaml
+++ b/openstack_controller/templates/size/medium.yaml
@@ -525,11 +525,7 @@ services:
             server: 5
           lifecycle:
             disruption_budget:
-              metadata:
-                min_available: 2
-              placement:
-                min_available: 2
-              osapi:
+              horizon:
                 min_available: 2
             upgrades:
               deployments:
