Use DaemonSet for neutron server in OVN deployment
With OVN neutron-server is a DaemonSet. Update child objects
and network policies accordingly.

Related-Prod: PRODX-34239
Change-Id: Ic84599f82249f5ce714bc8bb5ffdc9ebd8d64b97

--- a/openstack_controller/templates/base/network_policies/networking.yaml
+++ b/openstack_controller/templates/base/network_policies/networking.yaml
@@ -2,6 +2,9 @@
 {%- from 'macros/connections.j2' import from_namespaces %}
 {%- set api_ns_list = ["os_controller", "lma_deployment"] | namespaces  %}
 {%- set neutron_server = "networking:neutron:Deployment:neutron-server" %}
+{%- if spec.get("features", {}).get("neutron", {}).get("backend") == "ml2/ovn" %}
+{%- set neutron_server = "networking:neutron:DaemonSet:neutron-server" %}
+{%- endif %}
         server:
           spec:
             podSelector:
