--- a/openstack_controller/templates/child_objects/networking.yaml
+++ b/openstack_controller/templates/child_objects/networking.yaml
@@ -1,6 +1,31 @@
 {%- from 'macros/connections.j2' import to_child_object %}
 neutron:
   DaemonSet:
+    {%- if spec.get("features", {}).get("neutron", {}).get("backend") == "ml2/ovn" %}
+    neutron-server:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("networking", "rabbitmq", "StatefulSet", "openstack-neutron-rabbitmq-rabbitmq", ["amqp"]) | indent(12)}}
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
+          - {{ to_child_object("compute", "nova", "Deployment", "nova-api-osapi", ["n-api"]) | indent(12)}}
+          - {{ to_child_object("compute", "nova", "Deployment", "nova-api-metadata", ["n-metadata"]) | indent(12)}}
+          - {{ to_child_object("placement", "placement", "Deployment", "placement-api", ["p-api"]) | indent(12)}}
+          - {{ to_child_object("messaging", "rabbitmq", "StatefulSet", "openstack-rabbitmq-rabbitmq", ["amqp"]) | indent(12)}}
+          - {{ to_child_object("memcached", "memcached", "StatefulSet", "openstack-memcached-memcached", ["memcached"]) | indent(12)}}
+          - {{ to_child_object("dns", "designate", "StatefulSet", "designate-api", ["dns-api"]) | indent(12)}}
+      hash_fields: []
+      images:
+      - neutron_server
+      manifest: deployment_server
+      pod_labels:
+        application: neutron
+        component: server
+      ports:
+        - port: 9696
+          name: q-api
+          protocol: TCP
+    {%- endif %}
     bagpipe-bgp:
       connections:
         egress:
@@ -146,6 +171,7 @@ neutron:
         application: neutron
         component: neutron-sriov-agent
       type: dynamic
+    {%- if spec.get("features", {}).get("neutron", {}).get("backend") != "ml2/ovn" %}
   Deployment:
     neutron-server:
       connections:
@@ -170,6 +196,7 @@ neutron:
         - port: 9696
           name: q-api
           protocol: TCP
+    {%- endif %}
   Job:
     neutron-bootstrap:
       connections:
