[ovn] Increase pribe intervals
* Do not watch for database record changes
* Increase probe intervals

Related-Prod: PRODX-33540
Change-Id: I8c9ab97f1b5f95b04d4384703f885c51cb8d2ccc

--- a/openstack_controller/templates/services/networking.yaml
+++ b/openstack_controller/templates/services/networking.yaml
@@ -314,6 +314,9 @@ spec:
                   external-ids:
                     ovn-cms-options: "enable-chassis-as-gw"
                     ovn-bridge-mappings: {{ ','.join(bridge_mappings) }}
+                    ovn-monitor-all: true
+                    ovn-remote-probe-interval: 60000
+                    ovn-openflow-probe-interval: 60
                   ovs_bridges:
       {%- for network in spec.features.neutron.external_networks %}
                     {{ network.bridge }}:
@@ -326,6 +329,9 @@ spec:
                   external-ids:
                     ovn-encap-type: geneve
                     ovn-bridge-mappings: {{ ','.join(bridge_mappings) }}
+                    ovn-monitor-all: true
+                    ovn-remote-probe-interval: 60000
+                    ovn-openflow-probe-interval: 60
                   ovs_bridges:
         {%- for network in spec.features.neutron.external_networks %}
                    {{ network.bridge }}:
