Keystone's memcache: flush on reconnect
It prevents a scenario that can cause stale data
to be read. If there's more than one memcached server
and the connection to one is interrupted, keys that
mapped to that server will get reassigned to another.
If the first server comes back, those keys will map
to it again. Get can read stale data.

Related-PRODX: PRODX-38436
Change-Id: I1c978a959731408eec3172b09c69361ec2155404

--- a/tests/fixtures/render_service_template/output/identity/ussuri_ceph_local_non_dvr_policies.yaml
+++ b/tests/fixtures/render_service_template/output/identity/ussuri_ceph_local_non_dvr_policies.yaml
@@ -26,6 +26,7 @@ spec:
             allow_expired_window: 172800
           cache:
             backend: oslo_cache.memcache_pool
+            memcache_pool_flush_on_reconnect: True
           oslo_messaging_notifications:
             topics: notifications,stacklight_notifications
           oslo_policy:
